# mkite_db

./: README.md  pyproject.toml  requirements.txt  setup.py
mkite/cfg/: asgi.py  urls.py  wsgi.py
mkite/cli/: run_manage.py
mkite/dbimport/: ase.py  molfile.py
mkite/dbimport/tests/: test_ase.py
mkite/orm/: models.py
mkite/orm/base/: apps.py  models.py  serializers.py
mkite/orm/calcs/: apps.py  models.py  serializers.py
mkite/orm/jobs/: deleter.py  models.py  serializers.py
mkite/orm/jobs/tests/: test_deleter.py  test_models.py  test_serializers.py
mkite/orm/structs/: apps.py  models.py  serializers.py
mkite/orm/tests/: test_deserializers.py  test_repr.py
mkite/workflow/: apps.py
mkite_db/: manage.py
mkite_db/cfg/: settings.py
mkite_db/dbimport/: __init__.py  ase.py  asefile.py  base.py  infofile.py  molfile.py  mp.py  pmgfile.py
mkite_db/dbimport/tests/: test_ase.py  test_asefile.py  test_infofile.py  test_molfile.py  test_mp.py  test_pmgfile.py
mkite_db/orm/: .gitignore  deserializers.py  models.py  repr.py  serializers.py
mkite_db/orm/base/: apps.py  models.py  serializers.py
mkite_db/orm/calcs/: apps.py  models.py  serializers.py
mkite_db/orm/jobs/: apps.py  models.py  serializers.py
mkite_db/orm/mols/: apps.py  models.py  serializers.py
mkite_db/orm/structs/: apps.py  models.py  serializers.py
mkite_db/orm/tests/: test_deserializers.py  test_repr.py
mkite_db/workflow/: apps.py  parse.py
mkite_db/workflow/create/: __init__.py  base.py  simple.py  tuple.py
mkite_db/workflow/tests/: test_parse.py
(+50 files in other folders)
