[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mkite"
version = "0.1.0"
description = "mkite is an ETL pipeline for materials simulation"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@llnl.gov"}]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
kitedb = "mkite.cli.run_manage:main"

[tool.setuptools]
packages = ["mkite"]
